--- a/restaurantes.html
+++ b/restaurantes.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="../assets/images/Burger-King-Logo-CMS.png" type="image/x-icon"> <!-- Se debe cambiar por un .ico!!!-->
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <title>BURGER KING® ARGENTINA</title>
+    <title>BURGER KING® ARGENTINAAAAAA</title>
 </head>
 
 <body>
